--- a/Industrial/wayfire/wayfire.ini
+++ b/Industrial/wayfire/wayfire.ini
@@ -3,24 +3,24 @@ min_value = 0.100000
 modifier = <alt> <super> 
 
 [animate]
-close_animation = fade
+close_animation = zoom
 duration = 400ms circle
 enabled_for = (type equals "toplevel" | (type equals "x-or" & focusable equals true))
 fade_duration = 400ms circle
 fade_enabled_for = type equals "overlay"
-fire_color = \#D88BD9FF
-fire_duration = 300ms circle
+fire_color = \#B22303FF
+fire_duration = 300ms linear
 fire_enabled_for = none
-fire_particle_size = 11.300000
-fire_particles = 1200
-minimize_animation = zoom
+fire_particle_size = 16.000000
+fire_particles = 2000
+minimize_animation = none
 open_animation = zoom
 random_fire_color = false
 spin_duration = 250ms linear
 spin_rotations = 1
-squeezimize_duration = 300ms linear
+squeezimize_duration = 150ms linear
 startup_duration = 600ms linear
-zap_duration = 300ms linear
+zap_duration = 250ms linear
 zoom_duration = 500ms circle
 zoom_enabled_for = none
 
@@ -40,7 +40,7 @@ rotate_right = <ctrl> <super> KEY_RIGHT
 rotate_up = <ctrl> <super> KEY_UP
 
 [autostart]
-0_0 = systemctl --user import-environment
+0_env = dbus-update-activation-environment --systemd WAYLAND_DISPLAY DISPLAY XAUTHORITY
 CopyQ = flatpak run com.github.hluk.copyq --start-server
 audio = gentoo-pipewire-launcher
 autostart0 = gsr-ui
@@ -49,7 +49,7 @@ file-manager = thunar --daemon
 notifications = dunst
 panel = waybar -s /home/deive/.config/waybar/orange.css
 polkit = 
-wallpaper = swaybg -i /home/deive/Imagens/Wallpapers/Portal/portal-kanagawa.png
+wallpaper = swaybg -i /home/deive/Imagens/Wallpapers/Portal/portal-industrial.png
 
 [bench]
 average_frames = 25
@@ -60,43 +60,39 @@ blur_by_default = type is "toplevel"
 bokeh_degrade = 1
 bokeh_iterations = 15
 bokeh_offset = 5.000000
-box_degrade = 3
-box_iterations = 1
-box_offset = 1.300000
+box_degrade = 1
+box_iterations = 2
+box_offset = 1.000000
 gaussian_degrade = 1
-gaussian_iterations = 1
+gaussian_iterations = 2
 gaussian_offset = 1.000000
-kawase_degrade = 1
-kawase_iterations = 0
-kawase_offset = 1.400000
-method = box
+kawase_degrade = 3
+kawase_iterations = 2
+kawase_offset = 1.700000
+method = kawase
 saturation = 1.000000
-toggle = BTN_MIDDLE
+toggle = none
 
 [command]
 binding_0 = <alt> KEY_SYSRQ
-binding_1 = <alt> KEY_E
-binding_10 = KEY_KP2
+binding_1 = <super> KEY_E
 binding_2 = <super> KEY_M
 binding_5 = <alt> KEY_D
-binding_6 = <super>
-binding_9 = KEY_KP1
+binding_6 = <alt> KEY_W
 binding_mute = KEY_MUTE
 binding_screenshot = KEY_SYSRQ
 binding_screenshot_interactive = <shift> KEY_SYSRQ
 binding_terminal = <alt> KEY_ENTER
 command_0 = grim -g "$(slurp)" - | swappy -f -
 command_1 = thunar
-command_10 = xfce4-panel
 command_2 = wayland-logout
 command_3 = playerctl next
 command_4 = playerctl play-pause
 command_5 = fuzzel
-command_6 = xfce4-popup-whiskermenu
-command_9 = killall xfce4-panel
+command_6 = st
 command_mute = amixer set Master toggle
 command_screenshot = grim - | tee /home/deive/Imagens/CT/Wayland/$(date +'%Y-%m-%d-%H%M%S.png') | wl-copy
-command_screenshot_interactive = XCURSOR_SIZE=24 grim -g "$(slurp -w 0)" - | tee /home/deive/Imagens/CT/Wayland/$(date +'%Y-%m-%d-%H%M%S.png') | wl-copy
+command_screenshot_interactive = grim -g "$(slurp -w 0)" - | tee /home/deive/Imagens/CT/Wayland/$(date +'%Y-%m-%d-%H%M%S.png') | wl-copy
 command_terminal = alacritty
 command_volume_down = wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 command_volume_up = wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
@@ -107,18 +103,17 @@ repeatable_binding_volume_up = KEY_VOLUMEUP
 
 [core]
 background_color = \#1A1A1AFF
-close_top_view = <alt> KEY_C | <alt> KEY_F4
-exit = <super> KEY_M
+close_top_view = <alt> <shift> KEY_C
+exit = <alt> <ctrl> KEY_BACKSPACE
 focus_button_with_modifiers = false
 focus_buttons = BTN_LEFT | BTN_MIDDLE | BTN_RIGHT
 focus_buttons_passthrough = true
-include = autostart.ini
 max_render_time = -1
-plugins = alpha   animate   autostart         expo   fast-switcher   foreign-toplevel   grid   gtk-shell       move     place   resize     switcher       window-rules   wm-actions     zoom command ipc xdg-activation ipc-rules input-method-v1 shortcuts-inhibit obs firedecor scale cube decoration vswitch
+plugins = alpha   animate   autostart   command    wlr-foreign-toplevel  decoration   expo   fast-switcher     foreign-toplevel   grid   gtk-shell       move     place   resize     shortcuts-inhibit   switcher   vswitch     window-rules   wm-actions       cube input-method-v1
 preferred_decoration_mode = server
 transaction_timeout = 100
-vheight = 2
-vwidth = 2
+vheight = 1
+vwidth = 4
 xwayland = true
 xwayland_startup_script = 
 
@@ -127,15 +122,15 @@ line_color = \#FF0000FF
 line_width = 2
 
 [cube]
-activate = <ctrl> <super> BTN_LEFT
-background = \#000000FF
+activate = <alt> <ctrl> BTN_LEFT
+background = \#1A1A1AFF
 background_mode = simple
 cubemap_image = 
 deform = 0
 initial_animation = 350ms circle
 light = true
-rotate_left = <ctrl> <shift> KEY_LEFT
-rotate_right = <ctrl> <shift> KEY_RIGHT
+rotate_left = none
+rotate_right = none
 skydome_mirror = true
 skydome_texture = 
 speed_spin_horiz = 0.020000
@@ -159,8 +154,8 @@ title_height = 0
 use_csd = never
 
 [expo]
-background = \#1F1F28FF
-duration = 250ms sigmoid
+background = \#1A1A1AFF
+duration = 300ms circle
 inactive_brightness = 0.700000
 keyboard_interaction = true
 offset = 10
@@ -173,7 +168,7 @@ select_workspace_6 = KEY_6
 select_workspace_7 = KEY_7
 select_workspace_8 = KEY_8
 select_workspace_9 = KEY_9
-toggle = <super> KEY_E
+toggle = <alt> KEY_E
 transition_length = 200
 
 [extra-animations]
@@ -189,48 +184,13 @@ vortex_duration = 1000ms linear
 
 [extra-gestures]
 close_fingers = 20
-move_delay = 500
+move_delay = 750
 move_fingers = 3
 
 [fast-switcher]
-activate = <super> KEY_ESC
+activate = <alt> KEY_ESC
 activate_backward = <alt> <shift> KEY_ESC
 inactive_alpha = 0.700000
-
-[filters]
-
-[firedecor]
-active_accent = \#F5F5F5FF
-active_border = \#1D1F21E6
-active_outline = \#282828D3
-active_title = \#1D1F21FF
-border_size = 2
-button_size = 18
-button_style = simple
-corner_radius = 20
-debug_mode = false
-extra_themes = 
-font = sans-serif
-font_size = 12
-hovered_close = \#FF6572FF
-hovered_max = \#60FC79FF
-hovered_min = \#FFE450FF
-icon_size = 20
-icon_theme = hicolor
-ignore_views = none
-inactive_accent = \#E1DFFEFF
-inactive_border = \#1D1F21E6
-inactive_buttons = false
-inactive_outline = \#282828D2
-inactive_title = \#1D1F21FF
-layout = 
-max_title_size = 750
-normal_close = \#C24045FF
-normal_max = \#2EBB3AFF
-normal_min = \#C89E2BFF
-outline_size = 0
-padding_size = 8
-round_on = all
 
 [fisheye]
 radius = 450.000000
@@ -252,14 +212,6 @@ scan-height = 0
 scan-width = 0
 up = <shift> <super> KEY_UP
 
-[focus-request]
-auto_focus_children = true
-auto_focus_views = none
-auto_grant_focus = false
-deny_focus_views = none
-focus_last_demand = <alt> <ctrl> KEY_A
-focus_stealing_timeout = 1000
-
 [focus-steal-prevent]
 cancel_keys = KEY_ENTER
 deny_focus_views = none
@@ -268,8 +220,8 @@ timeout = 1000
 [follow-focus]
 change_output = true
 change_view = true
-focus_delay = 15
-raise_on_top = false
+focus_delay = 50
+raise_on_top = true
 threshold = 10
 
 [force-fullscreen]
@@ -289,39 +241,39 @@ ghost_toggle =
 
 [grid]
 duration = 300ms circle
-restore = <super> KEY_DOWN | <super> KEY_KP0
-slot_b = <super> KEY_KP2
-slot_bl = <super> KEY_KP1
-slot_br = <super> KEY_KP3
-slot_c = <super> KEY_UP | <super> KEY_KP5
-slot_l = <super> KEY_LEFT | <super> KEY_KP4
-slot_r = <super> KEY_RIGHT | <super> KEY_KP6
-slot_t = <super> KEY_KP8
-slot_tl = <super> KEY_KP7
-slot_tr = <super> KEY_KP9
+restore = <alt> KEY_DOWN | <alt> KEY_KP0
+slot_b = <alt> KEY_KP2
+slot_bl = <alt> KEY_KP1
+slot_br = <alt> KEY_KP3
+slot_c = <alt> KEY_UP | <alt> KEY_KP5
+slot_l = <alt> KEY_LEFT | <alt> KEY_KP4
+slot_r = <alt> KEY_RIGHT | <alt> KEY_KP6
+slot_t = <alt> KEY_KP8
+slot_tl = <alt> KEY_KP7
+slot_tr = <alt> KEY_KP9
 type = crossfade
 
 [gtk-shell]
 
 [hide-cursor]
-hide_delay = 250
-toggle = <ctrl> BTN_MIDDLE
+hide_delay = 2000
+toggle = <ctrl> <super> KEY_H
 
 [idle]
 cube_max_zoom = 1.500000
 cube_rotate_speed = 1.000000
 cube_zoom_speed = 1000
 disable_initially = false
-disable_on_fullscreen = false
+disable_on_fullscreen = true
 dpms_timeout = -1
-screensaver_timeout = 480
+screensaver_timeout = 3600
 toggle = none
 
 [input]
 3fg_drag = default
 click_method = default
-cursor_size = 0
-cursor_theme = Breeze_Dark
+cursor_size = 24
+cursor_theme = default
 disable_touchpad_while_mouse = false
 disable_touchpad_while_typing = false
 drag_lock = false
@@ -338,18 +290,18 @@ mouse_cursor_speed = 0.000000
 mouse_natural_scroll = false
 mouse_scroll_speed = 1.000000
 natural_scroll = false
-scroll_method = edge
+scroll_method = default
 tablet_motion_mode = default
 tap_and_drag = true
 tap_to_click = true
 touchpad_accel_profile = default
-touchpad_cursor_speed = 0.200000
+touchpad_cursor_speed = 0.000000
 touchpad_scroll_speed = 1.000000
 xkb_layout = br
-xkb_model = 
+xkb_model = abnt2
 xkb_options = 
 xkb_rules = evdev
-xkb_variant = abnt2
+xkb_variant = 
 
 [input-device]
 calibration = 
@@ -360,7 +312,7 @@ enable_text_input_v1 = true
 enable_text_input_v3 = true
 
 [invert]
-preserve_hue = true
+preserve_hue = false
 toggle = <super> KEY_I
 
 [ipc]
@@ -380,12 +332,12 @@ toggle = <alt> <super> KEY_M
 zoom_level = 75
 
 [move]
-activate = <super> BTN_LEFT
+activate = <alt> BTN_LEFT
 enable_snap = true
 enable_snap_off = true
 join_views = false
-preview_base_border = \#404080CC
-preview_base_color = \#8080FF80
+preview_base_border = \#58483ED1
+preview_base_color = \#B5541AD1
 preview_border_width = 3
 quarter_snap_threshold = 50
 snap_off_threshold = 10
@@ -413,59 +365,16 @@ scale = 1.000000
 transform = normal
 vrr = false
 
-[output:eDP-1]
-depth = 8
-icc_profile = 
-mode = auto
-position = 0, 0
-scale = 1.000000
-transform = normal
-vrr = false
-
 [pin-view]
 
-[pixdecor]
-always_decorate = none
-animate = false
-bg_color = \#124580D9
-bg_text_color = \#B3B3B3FF
-border_size = 5
-button_close_image = 
-button_color = \#000000FF
-button_line_thickness = 0.700000
-button_maximize_image = 
-button_minimize_image = 
-button_spacing = 5
-button_x_offset = 0
-button_y_offset = 0
-csd_titlebar_height = 32
-effect_color = \#E01C24FF
-effect_type = none
-enable_shade = true
-fg_color = \#E6A60AFF
-fg_text_color = \#FFFFFFFF
-ignore_views = none
-maximized_borders = false
-maximized_shadows = false
-overlay_engine = none
-rounded_corner_radius = 5
-shade_duration = 1000ms sigmoid
-shade_modifier = <ctrl> <super>
-shade_toggle = 
-shadow_color = \#00000040
-shadow_radius = 10
-title_font = 
-title_text_align = 1
-titlebar = true
-
 [place]
-mode = center
+mode = cascade
 
 [preserve-output]
 last_output_focus_timeout = 10000
 
 [resize]
-activate = <super> BTN_RIGHT
+activate = <alt> BTN_RIGHT
 activate_preserve_aspect = none
 min_height = 0
 min_width = 0
@@ -474,19 +383,19 @@ min_width = 0
 allow_zoom = false
 bg_color = \#1A1A1AE6
 close_on_new_view = false
-duration = 650ms circle
+duration = 750ms circle
 inactive_alpha = 0.750000
-include_minimized = true
+include_minimized = false
 middle_click_close = false
 minimized_alpha = 0.450000
 outer_margin = 0
-spacing = 30
+spacing = 50
 text_color = \#CCCCCCFF
 title_font_size = 16
 title_overlay = all
 title_position = center
-toggle = <super> BTN_MIDDLE
-toggle_all = <ctrl> <super> BTN_RIGHT
+toggle = <super> KEY_P
+toggle_all = 
 
 [scale-title-filter]
 bg_color = \#00000080
@@ -515,20 +424,20 @@ touch_duration = 250ms sigmoid
 touch_radius = 25
 
 [simple-tile]
-animation_duration = 3ms circle
-button_move = <super> BTN_LEFT
-button_resize = <super> BTN_RIGHT
-inner_gap_size = 0
+animation_duration = 0ms circle
+button_move = <alt> BTN_LEFT
+button_resize = <alt> BTN_RIGHT
+inner_gap_size = 5
 keep_fullscreen_on_adjacent = true
 key_focus_above = <super> KEY_K
 key_focus_below = <super> KEY_J
-key_focus_left = <super> KEY_H
+key_focus_left = <alt> KEY_H
 key_focus_right = <super> KEY_L
-key_toggle = <super> KEY_T
-outer_horiz_gap_size = 0
-outer_vert_gap_size = 0
-preview_base_border = \#2A2A37AD
-preview_base_color = \#2A2A37D2
+key_toggle = <alt> KEY_T
+outer_horiz_gap_size = 5
+outer_vert_gap_size = 5
+preview_base_border = \#58483ED1
+preview_base_color = \#B5541AD1
 preview_border_width = 3
 tile_by_default = all
 
@@ -559,32 +468,32 @@ speed_factor = 256.000000
 threshold = 0.350000
 
 [vswitch]
-background = \#2A2A37FF
+background = \#1A1A1AFF
 binding_1 = <alt> KEY_1
 binding_2 = <alt> KEY_2
 binding_3 = <alt> KEY_3
 binding_4 = <alt> KEY_4
-binding_down = <ctrl> <super> KEY_DOWN
+binding_down = <alt> <ctrl> KEY_DOWN
 binding_last = 
-binding_left = <ctrl> <super> KEY_LEFT
-binding_right = <ctrl> <super> KEY_RIGHT
-binding_up = <ctrl> <super> KEY_UP
-duration = 0ms linear
-gap = 0
+binding_left = <alt> <ctrl> KEY_LEFT
+binding_right = <alt> <ctrl> KEY_RIGHT
+binding_up = <alt> <ctrl> KEY_UP
+duration = 300ms circle
+gap = 20
 send_win_1 = <shift> <alt> KEY_1
 send_win_2 = <shift> <alt> KEY_2
 send_win_3 = <shift> <alt> KEY_3
 send_win_4 = <shift> <alt> KEY_4
-send_win_down = <shift> <super> KEY_DOWN
+send_win_down = 
 send_win_last = 
-send_win_left = <shift> <super> KEY_LEFT
-send_win_right = <shift> <super> KEY_RIGHT
-send_win_up = <shift> <super> KEY_UP
-with_win_down = <ctrl> <shift> <super> KEY_DOWN
+send_win_left = 
+send_win_right = 
+send_win_up = 
+with_win_down = 
 with_win_last = 
-with_win_left = <ctrl> <shift> <super> KEY_LEFT
-with_win_right = <ctrl> <shift> <super> KEY_RIGHT
-with_win_up = <ctrl> <shift> <super> KEY_UP
+with_win_left = <alt> <shift> <super> KEY_LEFT
+with_win_right = <alt> <shift> <super> KEY_RIGHT
+with_win_up = <alt> <shift> <super> KEY_UP
 wraparound = false
 
 [water]
@@ -593,48 +502,7 @@ activate = <ctrl> <super> BTN_LEFT
 [wayfire-shell]
 toggle_menu = <super> 
 
-[windecor]
-active_color = \#1F1F28FF
-attn_color = \#3CB371AA
-border_color = \#87CEEBFF
-border_size = 5
-button_always_colored = false
-button_order = 
-close_color = \#CC000077
-dynamic_border_color = false
-font = sans-serif
-font_color = \#FFFFFFFF
-font_size = -5
-icon_theme = breeze
-ignore_views = none
-inactive_color = \#333333DD
-maximize_color = \#09FF0077
-minimize_color = \#EDD40077
-sticky_color = \#1C71D877
-title_align = 0
-title_height = 24
-title_position = 2
-work_hard = false
-
 [window-rules]
-
-[winshadows]
-clip_shadow_inside = true
-enabled_views = type is "toplevel" & floating is true
-glow_color = \#1C71D8FF
-glow_emissivity = 1.000000
-glow_enabled = false
-glow_intensity = 0.600000
-glow_radius_limit = 100
-glow_spread = 10.000000
-glow_threshold = 0.030000
-horizontal_offset = 0
-include_undecorated_views = false
-light_type = gaussian
-overscale = 1.000000
-shadow_color = \#00000070
-shadow_radius = 40
-vertical_offset = 5
 
 [winzoom]
 dec_x_binding = <ctrl> <super> KEY_LEFT
@@ -647,22 +515,22 @@ preserve_aspect = true
 zoom_step = 0.100000
 
 [wm-actions]
-minimize = <super> KEY_TAB
+minimize = <alt> KEY_Q
 send_to_back = none
-toggle_always_on_top = <super> KEY_Q
-toggle_fullscreen = <super> KEY_F
+toggle_always_on_top = none
+toggle_fullscreen = <alt> KEY_F
 toggle_maximize = none
 toggle_showdesktop = none
 toggle_sticky = none
 
 [wobbly]
 friction = 3.000000
-grid_resolution = 5
+grid_resolution = 6
 spring_k = 8.000000
 
 [workarounds]
 all_dialogs_modal = true
-app_id_mode = full
+app_id_mode = stock
 auto_reload_config = true
 config_reload_delay = 20
 disable_primary_selection = false
