--- a/Industrial/alacritty/alacritty.toml
+++ b/Industrial/alacritty/alacritty.toml
@@ -47,7 +47,7 @@ white   = "#a89080"   # bege envelhecido (puxa do SchemeSel)
 
 [colors.bright]
 black   = "#2a2a2a"
-red     = "#b5541a"   # ferrugem viva (seu accent!)
+red     = "#b5541a"   # ferrugem viva (accent!)
 green   = "#7a8a6a"
 yellow  = "#a08c6a"
 blue    = "#7a8596"
